--- a/src/assets/styles/themes/theme-default.css
+++ b/src/assets/styles/themes/theme-default.css
@@ -41,9 +41,9 @@
 }
 
 .default-nav {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(14, 40, 55, 1);
 }
 
 .nav-link {
-    color: var(--firstColor) !important;
+    color: #fff !important;
 }
