Projects - Responsive img cover

--- a/src/assets/styles/themes/theme-default.css
+++ b/src/assets/styles/themes/theme-default.css
@@ -169,6 +169,9 @@ body {
     color: red;
 }
 
+.object-fit-cover {
+    object-fit: cover;
+}
 
 .carousel-caption {
     color: var(--secondColor);
